# Flask-web-app

./: .replit  README.md  app.py  clean.py  main.py  pyproject.toml  requirements.txt
config/: config.py
data/: app.db.sqlite3
migrations/versions/: 384053f7d40c_add_audio.py
src/: models.py  routes.py
src/libs/: convect.py  file_service.py  validation_file.py  validation_lang.py
src/repository/: audios.py  mp3.py
src/static/: style.css
src/templates/: base.html
src/templates/pages/: audios.html  edit_mp3.html  index.html  pdf_convector.html  upload.html
