[tool.poetry]
name = "flask-web-app"
version = "0.1.0"
description = ""
authors = ["Vladyslav Babenko <96999713+vlad-bb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pdfplumber = "^0.7.4"
gTTS = "^2.2.4"
art = "^5.7"
tqdm = "^4.64.1"
mp3p = "^1.0.1"
python-play = "^1.0.5"
Flask = "^2.2.2"
Flask-Migrate = "^3.1.0"
bcrypt = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
